Fix layout bug in timeline share buttons

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -786,4 +786,12 @@ Print styles
 
 }
 
-
+.social-share-button-wrapper-timeline{
+  .social-share-button-lines-timeline{
+    .social-share-button{
+      a{
+        width: 10%;
+      }
+    }
+  }
+}
